--- a/agent/src/main/resources/login/login.fxml
+++ b/agent/src/main/resources/login/login.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane cache="true" fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="900.0" stylesheets="@loginStyleOne.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<ScrollPane cache="true" fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllersAgent.LoginController">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
    <content>
       <VBox>
          <children>
-            <HBox id="keyboardInputStackPane" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <HBox id="chooseUsernameHBox" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
                   <Label styleClass="header-label" text="Choose Username" wrapText="true" />
                   <TextField fx:id="usernameTextField" prefHeight="34.0" prefWidth="250.0" promptText="Enter username..." HBox.hgrow="SOMETIMES">
@@ -29,7 +33,39 @@
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                </padding>
             </HBox>
-            <HBox id="machineStateHBox" alignment="TOP_CENTER" prefHeight="300.0" prefWidth="200.0" spacing="30.0" VBox.vgrow="SOMETIMES">
+            <HBox id="moreChoicesHBox" alignment="TOP_CENTER" spacing="10.0">
+               <children>
+                  <VBox spacing="4.0">
+                     <children>
+                        <Label styleClass="choice-label" text="Choose Allies Team" />
+                        <ChoiceBox fx:id="alliesTeamChoiceBox" maxHeight="34.0" minHeight="34.0" prefHeight="34.0" prefWidth="271.0" />
+                     </children>
+                  </VBox>
+                  <VBox spacing="4.0">
+                     <children>
+                        <Label styleClass="choice-label" text="Choose Total Threads" />
+                        <ChoiceBox fx:id="totalThreadsChoiceBox" maxHeight="34.0" minHeight="34.0" prefHeight="34.0" prefWidth="271.0" />
+                     </children>
+                  </VBox>
+                  <VBox spacing="4.0">
+                     <children>
+                        <Label styleClass="choice-label" text="Choose Tasks Withdrawal Size" />
+                        <Slider fx:id="tasksWithdrawalSizeSlider" majorTickUnit="50.0" max="1000.0" min="1.0" minorTickCount="50" prefWidth="320.0" showTickLabels="true" showTickMarks="true" value="1.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Slider>
+                     </children>
+                  </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </HBox>
+            <HBox id="loginHBox" alignment="TOP_CENTER" prefHeight="276.0" spacing="30.0" VBox.vgrow="SOMETIMES">
                <children>
                   <Button id="login" mnemonicParsing="false" onAction="#loginAction" prefHeight="60.0" prefWidth="180.0" text="Login" textAlignment="CENTER" wrapText="true" />
                   <Button id="quit" mnemonicParsing="false" onAction="#quitAction" prefHeight="60.0" prefWidth="180.0" text="Quit" textAlignment="CENTER" wrapText="true" />
@@ -59,4 +95,8 @@
          </children>
       </VBox>
    </content>
+   <stylesheets>
+      <URL value="@loginStyle.css" />
+      <URL value="@../main/generalStyle.css" />
+   </stylesheets>
 </ScrollPane>
