--- a/allies/src/main/resources/header/header.fxml
+++ b/allies/src/main/resources/header/header.fxml
@@ -1,78 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
 
-<HBox fx:id="headerHBox" alignment="TOP_CENTER" maxHeight="100.0" minHeight="20.0" prefHeight="100.0" prefWidth="900.0" spacing="10.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HeaderController">
+<HBox alignment="TOP_CENTER" maxHeight="100.0" minHeight="20.0" prefHeight="100.0" prefWidth="900.0" spacing="10.0" styleClass="pane" stylesheets="@headerStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllersAllies.HeaderController">
    <children>
-      <Button id="loadXMLButton" fx:id="loadButton" alignment="CENTER" contentDisplay="TOP" minHeight="20.0" minWidth="10.0" mnemonicParsing="false" onAction="#loadXML" prefHeight="64.0" prefWidth="110.0" text="Load XML" textFill="WHITE" HBox.hgrow="NEVER">
-         <font>
-            <Font name="Arial Bold" size="16.0" />
-         </font>
-         <HBox.margin>
-            <Insets top="6.0" />
-         </HBox.margin>
-      </Button>
-      <VBox maxHeight="100.0" minHeight="20.0" minWidth="50.0" spacing="2.0" HBox.hgrow="SOMETIMES">
-         <children>
-            <Label prefWidth="94.0" text="XML File Path:" textFill="GAINSBORO" VBox.vgrow="NEVER">
-               <font>
-                  <Font name="Arial" size="14.0" />
-               </font>
-               <padding>
-                  <Insets left="2.0" top="3.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </Label>
-            <TextField cache="true" editable="false" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="100.0" prefHeight="24.0" prefWidth="214.0" promptText="No XML file path yet given..." VBox.vgrow="NEVER" fx:id="xmlFilePathTextField">
-               <font>
-                  <Font name="Arial" size="14.0" />
-               </font>
-               <padding>
-                  <Insets left="6.0" right="-1.0" />
-               </padding>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </TextField>
-            <TextFlow maxWidth="1.7976931348623157E308" minWidth="100.0" nodeOrientation="LEFT_TO_RIGHT" VBox.vgrow="NEVER">
-               <children>
-                  <Label id="infoLabel" fx:id="loadXMLErrorLabel" alignment="TOP_LEFT" cache="true" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="214.0" textFill="GAINSBORO" wrapText="true">
-                     <font>
-                        <Font name="Arial" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="2.0" top="3.0" />
-                     </padding>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="-4.0" />
-               </padding>
-            </TextFlow>
-         </children>
-         <HBox.margin>
-            <Insets left="2.0" />
-         </HBox.margin>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets top="1.0" />
-         </padding>
-      </VBox>
-      <Button fx:id="machineButton" alignment="CENTER" cache="true" contentDisplay="CENTER" ellipsisString="" minHeight="20.0" minWidth="10.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="130.0" styleClass="screen-button" text="Machine" textAlignment="CENTER" textFill="#323232" wrapText="true" HBox.hgrow="NEVER">
+      <Button fx:id="dashboardButton" alignment="CENTER" cache="true" contentDisplay="CENTER" ellipsisString="" minHeight="20.0" minWidth="10.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="130.0" styleClass="screen-button" text="Dashboard" textAlignment="CENTER" textFill="#323232" wrapText="true" HBox.hgrow="NEVER">
          <font>
             <Font name="Arial Bold" size="16.0" />
          </font>
@@ -115,7 +54,7 @@
                   <Insets />
                </opaqueInsets>
             </ChoiceBox>
-            <Label fx:id="usernameHeaderLabel" alignment="CENTER" text="Hello Guest - UBoat User" textFill="GAINSBORO">
+            <Label fx:id="usernameHeaderLabel" alignment="CENTER" text="Hello Guest - Allies User" textFill="GAINSBORO">
                <font>
                   <Font name="Arial" size="14.0" />
                </font>
@@ -127,6 +66,9 @@
          <HBox.margin>
             <Insets />
          </HBox.margin>
+         <padding>
+            <Insets left="414.0" />
+         </padding>
       </VBox>
    </children>
    <opaqueInsets>
@@ -135,7 +77,4 @@
    <padding>
       <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
    </padding>
-   <stylesheets>
-      <URL value="@headerStyleOne.css" />
-   </stylesheets>
 </HBox>
