--- a/allies/src/main/resources/main/app.fxml
+++ b/allies/src/main/resources/main/app.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.*?>
-<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="600.0" minWidth="900.0" prefHeight="602.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AppController">
+<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="600.0" minWidth="900.0" prefHeight="602.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllersAllies.AppController">
    <content>
-      <BorderPane fx:id="mainBorderPane" stylesheets="@generalStyleOne.css">
+      <BorderPane fx:id="mainBorderPane" stylesheets="@generalStyle.css">
          <top>
             <fx:include fx:id="headerComponent" source="../header/header.fxml" BorderPane.alignment="TOP_CENTER" />
          </top>
@@ -12,7 +12,7 @@
             <StackPane fx:id="stackPaneContainer" BorderPane.alignment="CENTER">
                <children>
                   <fx:include fx:id="contestComponent" source="../contest/contest.fxml" BorderPane.alignment="BOTTOM_CENTER" />
-                  <fx:include fx:id="machineComponent" source="../machine/machine.fxml" BorderPane.alignment="BOTTOM_CENTER" />
+                  <fx:include fx:id="dashboardComponent" source="../dashboard/dashboard.fxml" BorderPane.alignment="BOTTOM_CENTER" />
                   <fx:include fx:id="loginComponent" source="../login/login.fxml" BorderPane.alignment="BOTTOM_CENTER" />
                </children>
             </StackPane>
